[package]
name = "yrs-warp"
version = "0.7.0"
edition = "2021"
description = "Yrs synchronization protocol using Warp web sockets"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs", "warp"]
homepage = "https://github.com/y-crdt/yrs-warp/"
repository = "https://github.com/y-crdt/yrs-warp/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = "0.18.1"
warp = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.34", features = ["rt", "net", "sync", "macros"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
log = "0.4"
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
tokio-tungstenite = "0.21"
tokio = { version = "1", features = ["full"] }
bytes = "1.6"