[package]
name = "yrs-warp"
version = "0.8.0"
edition = "2021"
description = "Yrs synchronization protocol using Warp web sockets"
license = "MIT"
authors = ["Bartosz Sypytkowski <b.sypytkowski@gmail.com>"]
keywords = ["crdt", "yrs", "warp"]
homepage = "https://github.com/y-crdt/yrs-warp/"
repository = "https://github.com/y-crdt/yrs-warp/"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = { version = "0.21.3", features = ["sync"] }
warp = "0.3.7"
futures-util = { version = "0.3.31", features = ["sink"] }
tokio = { version = "1.42.0", features = ["rt", "net", "sync", "macros"] }
serde = { version = "1.0.215", features = ["derive", "rc"] }
serde_json = "1.0.133"
tracing = { version = "0.1.41", features = ["log"] }
tokio-util = { version = "0.7.12", features = ["codec"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
tokio = { version = "1", features = ["full"] }
bytes = "1.9.0"